Updated build version

--- a/BaseObjects/BaseObjects.csproj
+++ b/BaseObjects/BaseObjects.csproj
@@ -6,10 +6,11 @@
 		<AssemblyName>Base.Objects</AssemblyName>
 		<ImplicitUsings>disabled</ImplicitUsings>		
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-		<Version>7.0.4</Version>
+		<Version>7.0.4.1</Version>
 		<PackageId>Base.Objects</PackageId>
 		<Authors>Test</Authors>
 		<Company>Test</Company>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
